@@ -1,5 +1,6 @@
 package com.openframe.authz.service;
 
+import com.openframe.authz.document.SSOConfig;
 import com.openframe.authz.document.Tenant;
 import com.openframe.authz.document.User;
 import com.openframe.authz.dto.TenantDiscoveryResponse;
@@ -76,27 +77,19 @@ public class TenantDiscoveryService {
      * Get available authentication providers for a tenant/user combination
      */
     private List<String> getAvailableAuthProviders(Tenant tenant, User user) {
-        List<String> providers = new ArrayList<>();
-        
-        // Password authentication (local)
-        if (user.getPasswordHash() != null) {
-            providers.add("password");
-        }
-        
-        // Add all enabled SSO providers from database
+
         List<String> ssoProviders = ssoConfigService.getActiveSSOConfigsForTenant(tenant.getId())
                 .stream()
-                .map(config -> config.getProvider())
-                .collect(Collectors.toList());
-        providers.addAll(ssoProviders);
+                .map(SSOConfig::getProvider)
+                .toList();
+
+        List<String> providers = new ArrayList<>(ssoProviders);
         
-        // OpenFrame SSO (always available if user exists in other tenants)
         long userTenantCount = userRepository.countByEmail(user.getEmail());
         if (userTenantCount >= 1) {
             providers.add("openframe-sso");
         }
         
-        // Ensure unique
         return providers.stream()
                 .filter(p -> p != null && !p.isBlank())
                 .distinct()
